tests/ucc/type/bad/conflict-fun-type-2.c
int f(int b, char c);

int f(int a)
{
    return 0;
}
